# predictive-maintenance-ai

./: .env.example  .gitignore  CODEBASE_EXPLANATION.md  COMPLETION_REPORT.md  DEPLOYMENT_GUIDE.md  Makefile  NEXT_STEPS.md  PROJECT_DELIVERY.md  PROJECT_SUMMARY.md  README.md  RUN_GUIDE.md  dev-setup.sh  docker-compose.yml  pyproject.toml  quickstart.py  requirements.txt  test_system.py
.github/workflows/: ci.yml
api/: __init__.py  main.py
dashboard/: __init__.py  app.py
docker/: Dockerfile.api  Dockerfile.dashboard  Dockerfile.train  prometheus.yml
models/: best_classifier.pkl  best_regressor.pkl  features.json
pipelines/: __init__.py  complete_pipeline.py  train.py
pma/: __init__.py  anomaly.py  config.py  data.py  features.py  logger.py  models.py  schemas.py  utils.py
tests/: conftest.py  test_api.py  test_data.py  test_features.py  test_models.py
